PortalPackage/ Enrollment Rx Core/objects/Presentation__c.object
<CustomObject>
    <fields>
        <fullName>Booking__c</fullName>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Presentations</relationshipLabel>
        <relationshipName>Presentations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period #</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Presenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Presenter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Presentations</relationshipLabel>
        <relationshipName>Presentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Money Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_Inquries__c</fullName>
        <label># of Inquries</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Students_Presented__c</fullName>
        <label># of Students Presented</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Presentation</label>
    <nameField>
        <displayFormat>PN-{000000}</displayFormat>
        <label>Presentation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presentations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>